# FFmpeg264InLinux

./: .gitignore  README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  VideoPlayer.cpp  cmdutils.h  config.h  ffmpeg.c  ffmpeg.h
ffmpeg/android_ffmpeg/: Makefile  build_ffmpeg.sh  config.fate  config.h  config.mak  src
ffmpeg/android_ffmpeg/compat/: strtod.d
ffmpeg/android_ffmpeg/doc/: config.texi
ffmpeg/android_ffmpeg/ffmpegsrc/: configure
ffmpeg/android_ffmpeg/libavcodec/: 012v.d  4xm.d  8bps.d  8svx.d  a64multienc.d  aac_ac3_parser.d  aac_adtstoasc_bsf.d  aac_parser.d  aacadtsdec.d  aaccoder.d  aacdec.d  aacdec_fixed.d  aacenc.d  aacenc_is.d  aacenc_ltp.d  aacenc_pred.d  aacenc_tns.d  aacenctab.d  aacps_fixed.d  aacps_float.d  aacpsdsp_fixed.d  aacpsdsp_float.d  aacpsy.d  aacsbr.d  aacsbr_fixed.d  aactab.d  aasc.d  ac3.d  ac3_parser.d  ac3dec_data.d  ac3dec_fixed.d  ac3dec_float.d  ac3dsp.d  ac3enc.d  ac3enc_fixed.d  ac3enc_float.d  ac3tab.d  acelp_filters.d  acelp_pitch_delay.d  acelp_vectors.d  (+678 more)
ffmpeg/android_ffmpeg/libavfilter/: aeval.d  af_adelay.d  af_aecho.d  af_aemphasis.d  af_afade.d  af_afftfilt.d  af_aformat.d  af_agate.d  af_alimiter.d  af_amerge.d  af_amix.d  af_anequalizer.d  af_anull.d  af_apad.d  af_aphaser.d  af_apulsator.d  af_aresample.d  af_asetnsamples.d  af_asetrate.d  af_ashowinfo.d  af_astats.d  af_atempo.d  af_biquads.d  af_channelmap.d  af_channelsplit.d  af_chorus.d  af_compand.d  af_compensationdelay.d  af_dcshift.d  af_dynaudnorm.d  af_earwax.d  af_extrastereo.d  af_firequalizer.d  af_flanger.d  af_hdcd.d  af_join.d  af_pan.d  af_replaygain.d  af_sidechaincompress.d  af_silencedetect.d  (+197 more)
ffmpeg/android_x264/: .depend  Makefile  build_x264.sh  config.h  config.mak  x264-snapshot-20161106-2245-stable.tar.bz2
(+538 files in other folders)
